# PLS_wrapper

./: .gitignore  LICENSE  README.md  load_pls_model_py.m  pls_analysis_py.m  pyproject.toml
src/PLS_wrapper/: pls.py
