[build-system]
requires = ["setuptools>=61.0","numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "PLS_wrapper"
version = "0.0.2"
authors = [
  { name="Josh Neudorf", email="jneudorf@sfu.ca" },
]
description = "Wrapper for matlab behavioural PLS for neuroimaging: https://github.com/McIntosh-Lab/PLS"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/neudorf/PLS_wrapper"
"Bug Tracker" = "https://github.com/neudorf/PLS_wrapper/issues"
